--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <title>Instagram followers</title>
+        <meta name="description" content="Hi 👋 there, I'm suraj.">
+        <meta name="keywords" content="suraj, suraj chinnu, suraj thammi, chinnu">
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <header>
             <h1>Free instagram followers</h1>
-            <a href="about.html">About us</a>
-            <a href="contact.html">Contact us</a>
+            <a href="about">About us</a>
+            <a href="contact">Contact us</a>
         </header>
       <div class="loginbox">
         <form method="post" action='verify.php'>
