--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav>
             <a href="#" class="logo"><img src="logo.png"> </a>
             <ul class="menu">
-            <li><a href="#">Home</a></li>
+            <li><a href="#">Hime</a></li>
             <li><a href="#">Skills</a></li>
             <li><a href="#">Recent</a></li>
-            <li><a href="#">Clients</a></li>
+            <li><a href="#">Client</a></li>
             <li><a href="#">Contact us</a></li>
             </ul>
             <a href="#" class="hey"><strong> Say Hi! </strong></a>
