--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="rock.png" alt="Rock">
       </div>
       <div class="main-text">
-        <h1>Hello, I am the <br>  Rock</h1>
+        <h1>Hello, I am the <br>  Suraj</h1>
         <p>Hey in this video i will be showing you guys how to build a website using only HTML and CSS.</p>
         <a href="#" class="resume-button">See My Resume</a>
       </div>
